# PYQT5-EXAMPLE-PARKING-SYSTEM

./: README.md  main.py  pyproject.toml
assets/: Colors.py
assets/styles/: MainWindow.py  PriceTable.py
src/_assets/: Colors.py
src/_assets/styles/: ControllerView.py  ListAutos.py  MainWindow.py  NewAuto.py  PriceTable.py  PriceView.py  ReportView.py  general.py
src/_db/: data.py  db_create.py  db_path.py  db_populate.py  db_test.py  itriad.db
src/assets/styles/: ControllerView.py  ListAutos.py  MainWindow.py  NewAuto.py  PriceTable.py  PriceView.py  ReportView.py  general.py
src/controllers/: ControllerController.py  MainWindow.py  PriceController.py  ReportController.py
src/db/: data.py  db_create.py  db_populate.py  db_test.py  itriad.db
src/models/: DayPrice.py  Vehicle.py  VehicleCrud.py  VehicleList.py
src/views/: ControllerView.py  PriceTable.py  PriceView.py  ReportView.py
src/views/gui/: ListAutos.py  NewAuto.py  PriceTable.py
