[tool.poetry]
name = "pyqt5-example-parking-system"
version = "0.1.0"
description = ""
authors = ["diogoduartec"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
PyQt5 = "^5.15.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
